# mnswpr

./: Cargo.toml  README.md  index.html  styles.css
src/: app.rs  errors.rs  exec.rs  external_binding.rs  lib.rs  main.rs  store.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: mnswpr.icns
src-tauri/src/: lib.rs  main.rs
src/components/: app.rs  board.rs  command.rs  mod.rs  start_button.rs  timer.rs
